--- a/directive/introduction.html
+++ b/directive/introduction.html
@@ -25,7 +25,7 @@
           <td><a href="directive/lifeCycle">生命周期指令</a></td>
           <td>+</td>
           <td>❌</td>
-          <td>元素创建或销毁</td>
+          <td class="trigger">元素创建或销毁</td>
           <td>一次</td>
           <td class="directive"><a href="directive/loading">+loading</a></td>
         </tr>
@@ -33,7 +33,7 @@
           <td><a href="directive/controller">控制指令</a></td>
           <td>$</td>
           <td>✔️</td>
-          <td>依赖数据发生变化</td>
+          <td class="trigger">依赖数据发生变化</td>
           <td>多次</td>
           <td class="directive"><a href="directive/each">$each</a></td>
         </tr>
@@ -41,7 +41,7 @@
           <td><a href="directive/eventHandler">事件指令</a></td>
           <td>+</td>
           <td>✔️</td>
-          <td>用户操作或系统事件</td>
+          <td class="trigger">用户操作或系统事件</td>
           <td>多次</td>
           <td class="directive"><span>+click</span></td>
         </tr>
@@ -49,9 +49,9 @@
           <td><a href="directive/meta">元指令</a></td>
           <td>@</td>
           <td>❌</td>
-          <td>框架对页面元素解析</td>
+          <td class="trigger">框架对页面元素解析</td>
           <td>一次</td>
-          <td class="directive"><a href="directive/raw">@raw</a></td>
+          <td><a href="directive/raw">@raw</a></td>
         </tr>
       </tbody>
     </table>
