--- a/overview/install.html
+++ b/overview/install.html
@@ -40,7 +40,7 @@
           </tr>
         </tbody>
       </table>
-      <div>你也可以在本地命令行工具中执行以下命令来下载托管在npm上的最新版本：<div class="code">npm install @peakman/dagger.js</div></div>
+      <div>你也可以在本地命令行工具中执行以下命令获取托管在npm上的最新版本：<div class="code">npm install @peakman/dagger.js</div></div>
     </div>
     <h3 class="question">浏览器兼容性</h3>
     <div class="answer">
