--- a/overview/introduction.html
+++ b/overview/introduction.html
@@ -12,7 +12,7 @@
     </div>
     <h3 class="question">学习路线</h3>
     <div class="answer">
-      <span>dagger.js中的核心概念包括：<a href="directive/introduction">指令</a>，<a href="scope/introduction">作用域</a>，<a href="module/introduction">模块</a>，<a href="router/introduction">路由</a>。同时，框架也提供了少量的<a href="api/introduction">api方法</a>（dagger.js以声明方式工作，在大多数业务场景下，开发者不需要调用这些api即可完成开发任务）。本文档围绕以上概念组织章节结构，在每个章节内都提供了与内容关联的使用示例。现在让我们开始dagger.js的体验之旅吧。</span>
+      <span>dagger.js中的核心概念包括：<a href="directive/introduction">指令</a>，<a href="directive/scope">作用域</a>，<a href="module/introduction">模块</a>，<a href="router/introduction">路由</a>。同时，框架也提供了少量的<a href="api/introduction">api方法</a>（dagger.js以声明方式工作，在大多数业务场景下，开发者不需要调用这些api即可完成开发任务）。本文档围绕以上概念组织章节结构，在每个章节内都提供了与内容关联的使用示例。现在让我们开始dagger.js的体验之旅吧。</span>
     </div>
   </div>
 </template>
