--- a/directive/scope.html
+++ b/directive/scope.html
@@ -3,14 +3,14 @@
     <div class="content">
       <h3 class="question">什么是作用域</h3>
       <div class="answer">在dagger.js中，作用域特指指令表达式中变量“$scope”所指向的对象。</div>
+      <h3 class="question">自定义作用域</h3>
+      <div class="answer">作用域对象可以由特定指令（<a href="directive/loading">+loading</a>和<a href="directive/each">$each</a>）创建，由指令创建的作用域称为自定义作用域，创建了自定义作用域的指令称为该作用域的源指令。指令表达式中的“$scope”指向其最近层级元素上的源指令创建出的作用域对象。</div>
       <h3 class="question">默认作用域</h3>
-      <div class="answer">默认作用域是由框架所创建和维护的顶层作用域对象。默认作用域对象中只包括<a href="router/introduction">路由对象$router</a>和<a href="miscellaneous/introduction">验证器$validator</a>。如果用户从未创建过作用域，那么指令中的“$scope”将指向默认作用域。</div>
-      <h3 class="question">如何创建作用域</h3>
-      <div class="answer">作用域对象可以由特定指令（<a href="directive/loading">+loading</a>和<a href="directive/each">$each</a>）创建，由用户代码创建出的作用域称为自定义作用域。指令表达式中的“$scope”永远指向其最近层级创建出的作用域对象。</div>
+      <div class="answer">默认作用域是由框架所创建和维护的顶层作用域对象。默认作用域对象中只包括<a href="router/introduction">路由对象$router</a>和<a href="miscellaneous/introduction">验证器$validator</a>。如果在某条指令的宿主元素或其上层元素的指令中从未创建过自定义作用域，那么指令中的“$scope”将指向默认作用域。</div>
       <h3 class="question">如何销毁作用域</h3>
-      <div class="answer">自定义作用域对象在其创建者的宿主元素被销毁时自动销毁。默认作用域在页面的生存期内永远不会被销毁。</div>
+      <div class="answer">自定义作用域对象在其源指令的宿主元素被销毁时自动销毁。默认作用域在页面的生存期内永远不会被销毁。</div>
       <h3 class="question">作用域的工作方式</h3>
-      <div class="answer">作用域的工作方式与<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">层叠样式表</a>非常接近。新创建的作用域对象继承自其创建前“$scope”所指向的旧作用域对象，这意味着你可以通过当前的“$scope”对象访问到定义在旧作用域上的字段值（除非它们被新作用域上的同名字段所覆盖）。</div>
+      <div class="answer">作用域的工作方式与<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">层叠样式表</a>非常接近，某一层级的源指令创建出的作用域将对源指令的宿主元素及其子元素生效。新创建的作用域对象继承自其创建前“$scope”所指向的旧作用域对象，这意味着你可以通过当前的“$scope”对象访问到定义在旧作用域上的字段值（除非它们被新作用域上的同名字段所覆盖）。</div>
       <h3 class="question">作用域的匿名访问</h3>
       <div class="answer">在实际开发过程中，通常可以使用匿名方式来访问作用域下的字段以使代码更加精简。例如，在指令表达式中你可以使用“fieldName”来代替“$scope.fieldName”，两种访问方式的效果是一样的。</div>
       <h3 class="question">作用域的演示实例</h3>
