--- a/directive/scope.html
+++ b/directive/scope.html
@@ -2,15 +2,20 @@
     <h2>${ $['directive.scope'] }</h2>
     <div class="content">
       <h3 class="question">什么是作用域</h3>
-      <div class="answer">在dagger.js中，作用域特指指令表达式中变量“$scope”所指向的对象。</div>
+      <div class="answer">在dagger.js中，作用域特指指令表达式中的变量“$scope”所指向的对象。</div>
       <h3 class="question">默认作用域</h3>
-      <div class="answer">默认作用域是由框架所创建和维护的顶层作用域对象。默认作用域对象中只包括<a href="router/introduction">路由对象$router</a>和<a href="miscellaneous/introduction">验证器函数$validator</a>。如果在某条指令的宿主元素及其上层元素的指令中从未创建过作用域，那么指令中的“$scope”将指向默认作用域。</div>
+      <div class="answer">默认作用域是由框架所创建和维护的顶层作用域对象。默认作用域对象中只包括<a href="router/introduction">路由对象$router</a>和<a href="miscellaneous/introduction">验证器函数$validator</a>。如果在某条指令的宿主元素及其上层元素的指令中从未创建过作用域，那么该指令表达式中的“$scope”将指向默认作用域。参考如下示例：</div>
+      <iframe height="300" style="width: 100%;" scrolling="no" title="Untitled" src="https://codepen.io/dagger8224/embed/RwQowmb?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+        See the Pen <a href="https://codepen.io/dagger8224/pen/RwQowmb">
+        Untitled</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+        on <a href="https://codepen.io">CodePen</a>.
+      </iframe>
       <h3 class="question">自定义作用域</h3>
-      <div class="answer">可以通过<a href="directive/loading">+loading</a>和<a href="directive/each">$each</a>指令创建作用域对象，由指令创建出的作用域称为自定义作用域，创建了自定义作用域的指令称为该作用域的源指令。指令表达式中的“$scope”指向其最近层级元素上的源指令创建出的作用域对象。</div>
+      <div class="answer">可以通过<a href="directive/loading">+loading</a>和<a href="directive/each">$each</a>指令创建新的作用域对象实例。由指令创建出的作用域称为自定义作用域，创建出自定义作用域的指令称为该作用域的源指令。如果在某条指令的宿主元素或其上层元素的指令中创建过自定义作用域，那么该指令表达式中的“$scope”将指向其最近层级元素上的源指令所创建出的作用域对象。</div>
       <h3 class="question">如何销毁作用域</h3>
       <div class="answer">自定义作用域对象在其源指令的宿主元素被销毁时自动销毁。默认作用域在页面的生存期内永远不会被销毁。</div>
       <h3 class="question">作用域的工作方式</h3>
-      <div class="answer">作用域的工作方式与<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">层叠样式表</a>非常接近，某一层级的源指令创建的作用域将对其宿主元素的其余指令（<a href="directive/exist">$exist</a>指令除外，在相关章节中会进行说明）及宿主元素子层级元素上的全部指令生效。新创建的作用域对象继承自其创建前“$scope”所指向的旧作用域对象，这意味着你可以在指令中通过当前的“$scope”对象访问到定义在旧作用域上的字段值（除非被新作用域对象上的同名字段所覆盖）。</div>
+      <div class="answer">作用域的工作方式与<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/CSS">层叠样式表</a>非常接近，某一层级的源指令创建的作用域将对其宿主元素的其余指令（<a href="directive/exist">$exist</a>指令除外，在相关章节中会进行说明）及宿主元素子层级元素上的所有指令生效。新创建的作用域对象继承自其创建前“$scope”所指向的旧作用域对象，这意味着你可以在指令中通过当前的“$scope”对象访问到定义在旧作用域上的字段值（除非被新作用域对象上的同名字段所覆盖）。</div>
       <h3 class="question">作用域的匿名访问</h3>
       <div class="answer">在实际开发过程中，可以匿名访问作用域下的字段以使代码更加精简。例如，在指令表达式中你可以使用“fieldName”来代替“$scope.fieldName”，两种访问方式的效果是一样的。</div>
       <h3 class="question">作用域的演示实例</h3>
