--- a/directive/unloaded.html
+++ b/directive/unloaded.html
@@ -1,35 +1,20 @@
-<!DOCTYPE html>
-<html>
-  <script type="dagger/configs">
-    {
-      "template": {
-          "uri": "#template",
-          "style": "style"
-      },
-      "style": "#style",
-      "demo": {
-          "uri": "./unloaded_demo.html",
-          "type": "string"
-      }
-    }
-  </script>
-  <template id="template">
-    <h2>${ $['directive.unloaded'] }</h2>
-    <div class="content">
-      <template $each="$['directive.unloaded.sections']">
-        <h3 class="question">${ item.question }</h3>
-        <div class="answer" $html="item.answer"></div>
-      </template>
-    </div>
+<h2>${ $['directive.unloaded'] }</h2>
+<div class="content">
+  <template $exist="language == 'zh-cn'">
+    <h3 class="question">+unloaded指令的作用</h3>
+    <div class="answer">“+unloaded”指令在宿主元素从DOM树移除之后由框架触发调用，用于完成进一步的清理工作，其表达式计算结果无意义。</div>
+    <h3 class="question">+unloaded指令示例</h3>
+    <div class="answer">下面我们来看一个+unloaded指令的演示示例。</div>
+    <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] +unloaded directive" src="https://codepen.io/dagger8224/embed/PoQbQbQ?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
+      See the Pen <a href="https://codepen.io/dagger8224/pen/PoQbQbQ">
+      [dagger-demo] +unloaded directive</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
+      on <a href="https://codepen.io">CodePen</a>.
+    </iframe>
   </template>
-  <style id="style" type="dagger/style">
-    h3::before {
-        content: "😕";
-        margin-right: 10px;
-    }
-    .answer::before {
-        content: "😄";
-        margin-right: 10px;
-    }
-  </style>
-</html>
+  <template $exist="language == 'en-us'">
+    <template $each="$['directive.unloaded.sections']">
+      <h3 class="question">${ item.question }</h3>
+      <div class="answer" $html="item.answer"></div>
+    </template>
+  </template>
+</div>
