--- a/directive/sentry.html
+++ b/directive/sentry.html
@@ -6,7 +6,7 @@
     <h3 class="question">+sentry指令表达式的返回值</h3>
     <div class="answer">当任意一个宿主元素上的“+sentry”指令表达式的计算结果为true或等效值时，路由跳转过程将终止。</div>
     <h3 class="question">+sentry指令示例</h3>
-    <div class="answer">下面我们来看一个+sentry指令的演示示例。</div>
+    <div class="answer">“+sentry”指令示例将在<a href="router/introduction">路由</a>章节中演示。</div>
   </template>
   <template $exist="language == 'en-us'">
     <template $each="$['directive.sentry.sections']">
