--- a/directive/checked.html
+++ b/directive/checked.html
@@ -4,7 +4,7 @@
     <h3 class="question">$checked指令的作用</h3>
     <div class="answer">“$checked”指令用于绑定宿主元素的选中状态，适用于类型为单选（radio）和多选（checkbox）的input元素，以及下拉选择框的选项（option）元素。</div>
     <h3 class="question">$checked指令表达式的返回值</h3>
-    <div class="answer">$checked指令的执行结果是布尔值。值为true代表元素处于选中状态，值为false代表元素处于取消选中状态。当该指令表达式的内容是合法的左操作数时，用户对宿主元素的操作将导致表达式变量同步变化，实现双向数据绑定。</div>
+    <div class="answer">$checked指令的执行结果是布尔值，值为true代表元素处于选中状态，值为false代表元素处于取消选中状态。当该指令表达式的内容是合法的<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Operators#%E5%B7%A6%E8%A1%A8%E8%BE%BE%E5%BC%8F">左表达式</a>时，用户对宿主元素的操作将导致表达式计算结果同步变化，实现作用域数据与DOM元素属性之间的的双向绑定。</div>
     <h3 class="question">$checked指令示例</h3>
     <div class="answer">下面我们来看$checked指令的演示示例。</div>
     <iframe height="300" style="width: 100%;" scrolling="no" title="[ dagger-demo] $checked directive for radio" src="https://codepen.io/dagger8224/embed/yLvVmrx?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
