update $each directive

--- a/directive/class.html
+++ b/directive/class.html
@@ -26,7 +26,8 @@
           on <a href="https://codepen.io">CodePen</a>.
         </iframe>
       </div>
-      <div>其余情况下，返回值将转换为字符串处理。</div></div>
+      <div>其余情况下，返回值将转换为字符串处理。</div>
+    </div>
     <h3 class="question">$class指令与class属性的关系</h3>
     <div class="answer">$class指令表达式的计算结果将与宿主元素class属性的内容融合后作为最终的className。</div>
   </template>
