--- a/directive/sentry.html
+++ b/directive/sentry.html
@@ -3,7 +3,7 @@
   <template $exist="language == 'zh-cn'">
     <h3 class="question">+sentry指令的作用</h3>
     <div class="answer">“+sentry”指令在即将发生页面内路由跳转时由框架触发调用，根据表达式的执行结果判断是否继续进行路由跳转。+sentry指令表达式中可以使用指向目标<a href="router/introduction">路由</a>对象的上下文参数“$nextRouter”。</div>
-    <h3 class="question">+sentry指令表达式的返回值</h3>
+    <h3 class="question">+sentry指令表达式的执行结果</h3>
     <div class="answer">当任意一个宿主元素上的“+sentry”指令表达式的计算结果为true或等效值时，路由跳转过程将终止。</div>
     <h3 class="question">+sentry指令示例</h3>
     <div class="answer">“+sentry”指令示例将在<a href="router/introduction">路由</a>章节中演示。</div>
