--- a/overview/hello_dagger.html
+++ b/overview/hello_dagger.html
@@ -7,7 +7,10 @@
     </div>
   </div>
   <h3 class="question">提示</h3>
-  <div class="answer">你可以修改示例代码中“+loading”指令等号右侧作用域对象的内容，查看代码对程序结果的影响。</div>
+  <div class="answer">
+    <div>你可以修改示例代码中“+loading”指令等号右侧作用域对象的内容，查看代码对程序结果的影响。</div>
+    <div>如示例中所示，在dagger.js中，你可以使用<a target="_blank" href="https://developer.mozilla.org/zh-CN/docs/Web/JavaScript/Reference/Template_literals">模板字符串</a>语法（不需要在两端添加反引号）代替textContent来构建动态内容。在之后的示例中我们会频繁使用这种方式来打印示例执行结果。</div>
+  </div>
   <iframe height="300" style="width: 100%;" scrolling="no" title="[dagger-demo] Hello dagger!" src="https://codepen.io/dagger8224/embed/abqNQre?default-tab=html%2Cresult&editable=true&theme-id=dark" frameborder="no" loading="lazy" allowtransparency="true" allowfullscreen="true">
     See the Pen <a href="https://codepen.io/dagger8224/pen/abqNQre">
     [dagger-demo] Hello dagger!</a> by Tony Peakman (<a href="https://codepen.io/dagger8224">@dagger8224</a>)
